--- a/scalar/test/CMakeLists.txt
+++ b/scalar/test/CMakeLists.txt
@@ -2,6 +2,8 @@ if (BUILD_TESTING)
   add_library(Catch INTERFACE)
   target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+
   set(TEST_SOURCES
     catch_main.cpp)
 
