Fix last merge commit

--- a/scalar/CMakeLists.txt
+++ b/scalar/CMakeLists.txt
@@ -63,3 +63,4 @@ add_definitions(-DN_MAX=${N_MAX})
 # Invoke subprojects
 add_subdirectory(src/cpu)
 add_subdirectory(src/cuda)
+add_subdirectory(test)
