Move tests up to 3D to OP-DSL repo

--- a/scalar/CMakeLists.txt
+++ b/scalar/CMakeLists.txt
@@ -71,3 +71,5 @@ add_definitions(-DN_MAX=${N_MAX})
 # Invoke subprojects
 add_subdirectory(src/cpu)
 add_subdirectory(src/cuda)
+enable_testing()
+add_subdirectory(test)
