Update measurements for CUDA.
Don't measure memallocs, remove unnecessary device synchroniseds.

--- a/scalar/src/cuda/CMakeLists.txt
+++ b/scalar/src/cuda/CMakeLists.txt
@@ -7,14 +7,45 @@ if (BUILD_FOR_GPU)
   set(CUDA_64_BIT_DEVICE_CODE ON) # -m64 compiler option
   set(CUDA_PROPAGATE_HOST_FLAGS OFF)
 
-  set(CUDA_NVCC_FLAGS
-      "${CUDA_NVCC_FLAGS}         -arch=sm_35 -gencode arch=compute_60,code=sm_60 -Xptxas -dlcm=cg -std=c++11")
-  set(CUDA_NVCC_FLAGS_DEBUG "${CUDA_NVCC_FLAGS_DEBUG}   -g -G -O0 -ftz=false -fmad=false               ")
-  set(CUDA_NVCC_FLAGS_RELEASE "${CUDA_NVCC_FLAGS_RELEASE} -O3                                            ")
+  # architecture
+  set(ARCHITECTURE
+      "AUTO"
+      CACHE STRING "What is your target CUDA architecture?")
+  if (${ARCHITECTURE} STREQUAL "AUTO")
+    set(CUDA_ARCH_LIST Auto)
+    cuda_select_nvcc_arch_flags(CUDA_ARCH_FLAGS ${CUDA_ARCH_LIST})
+    list(APPEND CUDA_NVCC_FLAGS ${CUDA_ARCH_FLAGS})
+    string(
+      REPLACE ";"
+              " "
+              ARCH_FLAGS
+              "${CUDA_NVCC_FLAGS}")
+  else ()
+    string(
+      REPLACE "NUM"
+              ${ARCHITECTURE}
+              ARCH_FLAGS
+              "-gencode arch=compute_NUM,code=sm_NUM")
+  endif ()
+
+  set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -Xptxas -dlcm=cg -std=c++11")
+  set(CUDA_NVCC_FLAGS_DEBUG "${CUDA_NVCC_FLAGS_DEBUG}   -g -G -O0 -ftz=false -fmad=false")
+  set(CUDA_NVCC_FLAGS_RELEASE "${CUDA_NVCC_FLAGS_RELEASE} -O3")
 
   cuda_include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src/cuda/
                            ${PROJECT_SOURCE_DIR}/src/cuda/generics/)
   set(CUDA_LIBRARIES ${CUDA_TOOLKIT_ROOT_DIR}/lib64/libcudart.so) # , ${CUDA_TOOLKIT_ROOT_DIR}/lib64/libcublas.so)
+
+  if (USE_PROFILING)
+    cuda_add_library(profiling_cuda SHARED ./cuda_timing.cu)
+    # target_include_directories(profiling PRIVATE ${PROJECT_SOURCE_DIR}/include ./)
+    target_compile_options(profiling_cuda PRIVATE -fPIC)
+    if (BUILD_FOR_MPI)
+      target_compile_definitions(profiling_cuda PRIVATE -DUSE_MPI)
+    endif (BUILD_FOR_MPI)
+    target_compile_definitions(profiling_cuda PUBLIC -DPROFILING=1)
+  endif (USE_PROFILING)
+
   cuda_add_library(
     tridcuda
     ${PROJECT_SOURCE_DIR}/src/cuda/trid_cuda.cu
@@ -56,7 +87,7 @@ if (BUILD_FOR_GPU)
 
     target_link_libraries(tridcuda_mpi tridcuda)
     if (USE_PROFILING)
-      target_link_libraries(tridcuda_mpi profiling)
+      target_link_libraries(tridcuda_mpi profiling_cuda)
     endif (USE_PROFILING)
     install(
       TARGETS tridcuda_mpi
